# autonomous-agents

./: .coverage  .gitignore  AGENTS.md  README.md  init.sh  install.sh  pyproject.toml
.opencode/: config.json
.opencode/agents/: architect.md  backlog-groomer.md  check.md  commit.md  discover.md  engineer.md  guard.md  make.md  planner.md  progress.md  release.md  (+8 more)
lib/: cost_tracker.py  event_stream.py  orchestrator.py  retry.py  runners.py  skills.py  spec_parser.py  wizard.py
presentation/: index.html
templates/: index.yaml
tests/: README.md  conftest.py  test_adr_context.py  test_agent_delegation.py  test_bootstrap_e2e.py  test_cmd_wizard_integration.py  test_cost_tracker.py  test_cost_tracker_edges.py  test_e2e_cli.py  test_e2e_smoke.py  test_event_stream.py  test_health_check.py  test_install.bats  test_m14_bug_fixes.py  test_m14_coverage.py  test_orchestrator.py  test_orchestrator_cmd_discover.py  test_orchestrator_cmd_new.py  test_orchestrator_cmds.py  test_orchestrator_final.py  test_orchestrator_full.py  test_orchestrator_full2.py  test_orchestrator_gates.py  test_orchestrator_last.py  test_orchestrator_main.py  test_orchestrator_micro.py  test_orchestrator_misc.py  test_orchestrator_misc2.py  test_orchestrator_more.py  test_orchestrator_phases.py  test_orchestrator_planner.py  test_orchestrator_resume.py  test_orchestrator_rfc_worktree.py  test_orchestrator_runloop.py  test_orchestrator_setup_wizard.py  test_orchestrator_sprint.py  test_orchestrator_timeouts.py  test_per_agent_runner.py  test_persona_skill_routing.py  test_phase_skill_routing.py  (+24 more)
(+36 files in other folders)
