[project]
name = "autonomous-agents"
version = "0.1.0"
description = "Deterministic orchestrator + scoped LLM agents for SCRUM-style autonomous development pipelines."
requires-python = ">=3.10"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests using a stub agent (no real LLM calls)",
]
